ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-ingress

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - java-demo.com
    secretName: java-demo-tls
  rules:
  - host: java-demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-demo-service
            port:
              number: 80
